<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation_1"
            android:checked="false"
            android:title="@string/navigation_view_item1"/>
        <item
            android:id="@+id/navigation_2"
            android:checked="false"
            android:title="@string/navigation_view_item2"/>
        <item
            android:id="@+id/navigation_3"
            android:checked="false"
            android:title="@string/navigation_view_item3"/>
        <item
            android:id="@+id/navigation_4"
            android:checked="false"
            android:title="@string/navigation_view_item4"/>
    </group>

    <item
        android:id="@+id/category"
        android:title="@string/navigation_category_2">
        <menu>
            <item
                android:id="@+id/navigation_5"
                android:title="@string/navigation_view_item5" />
        </menu>
    </item>

</menu>